--- a/routines_json/easy_start.json
+++ b/routines_json/easy_start.json
@@ -1,20 +1,25 @@
-[
-  {
-    "pose": "MountainPose",
-    "prep_time": 5,
-    "hold_time": 10,
-    "transition": "Breng je armen omhoog en maak je klaar voor de volgende pose."
-  },
-  {
-    "pose": "TreePose",
-    "prep_time": 5,
-    "hold_time": 10,
-    "transition": "Laat je voet zakken en stap langzaam naar achter voor Warrior 1."
-  },
-  {
-    "pose": "Warrior1",
-    "prep_time": 5,
-    "hold_time": 10,
-    "transition": "Keer terug naar Mountain Pose of sluit je oefening af met ontspanning."
-  }
-]
+{
+  "title": "easy Start",
+  "description": "Een eenvoudige drie-poses routine om je dag rustig te beginnen.",
+  "thumbnail": "TreePose.jpg",
+  "poses": [
+    {
+      "pose": "MountainPose",
+      "prep_time": 5,
+      "hold_time": 5,
+      "transition": "Breng je armen omhoog en maak je klaar voor de volgende pose."
+    },
+    {
+      "pose": "TreePose",
+      "prep_time": 5,
+      "hold_time": 5,
+      "transition": "Laat je voet zakken en stap langzaam naar achter voor Warrior 1."
+    },
+    {
+      "pose": "Warrior1",
+      "prep_time": 5,
+      "hold_time": 5,
+      "transition": "Keer terug naar Mountain Pose of sluit je oefening af met ontspanning."
+    }
+  ]
+}
