AI feedback werkt maar is laggy en nog niet goed gestructureerd

--- a/routines_json/a_easy_start.json
+++ b/routines_json/a_easy_start.json
@@ -1,5 +1,5 @@
 {
-  "title": "easy Start",
+  "title": "an easy Start",
   "description": "Een eenvoudige drie-poses routine om je dag rustig te beginnen.",
   "thumbnail": "TreePose.jpg",
   "poses": [
