--- a/.gitignore
+++ b/.gitignore
@@ -21,10 +21,10 @@ venv/
 .ipynb_checkpoints/
 
 # Environment/config files
-.env
+.env/Users/julesdepauw/Documents/school/final_works/cleaned-FinalWorks/Readme
 
 # Mac Finder
 Icon?
 
 # Niet in repo:
-modelposes/
+# modelposes/
